--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,3 +14,16 @@
 // Coreui
 @import '~@coreui/coreui/dist/css/coreui.min.css';
 @import '~@coreui/icons/css/free.min.css';
+
+//DateTime
+@import '~react-datetime/css/react-datetime.css';
+
+// React S Alert
+@import '~react-s-alert/dist/s-alert-default.css';
+@import '~react-s-alert/dist/s-alert-css-effects/slide.css';
+@import '~react-s-alert/dist/s-alert-css-effects/scale.css';
+@import '~react-s-alert/dist/s-alert-css-effects/bouncyflip.css';
+@import '~react-s-alert/dist/s-alert-css-effects/flip.css';
+@import '~react-s-alert/dist/s-alert-css-effects/genie.css';
+@import '~react-s-alert/dist/s-alert-css-effects/jelly.css';
+@import '~react-s-alert/dist/s-alert-css-effects/stackslide.css';
