--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,3 +27,6 @@
 @import '~react-s-alert/dist/s-alert-css-effects/genie.css';
 @import '~react-s-alert/dist/s-alert-css-effects/jelly.css';
 @import '~react-s-alert/dist/s-alert-css-effects/stackslide.css';
+
+//DateTime
+@import '~@fancyapps/fancybox/dist/jquery.fancybox.min.css';
